--- a/CS/Algorithms/hw-3.tex
+++ b/CS/Algorithms/hw-3.tex
@@ -95,44 +95,48 @@ More precisely: $T$ should have minimum weight among all spanning trees of $G$ t
  \end{problem}
 
 \solution{
+  Collaborated with: Yael Sulkin
 
 \begin{algorithmic}
-  \State Let $K = \emptyset$
+  \State Let $K = \emptyset$, Let $S$ be a single pair of ($P_i, FindMin()$) where $P_i$ is a partition and FindMin() 
+  searches for the difference of a given edge and the second greatest edge in the same partition. 
   \State Assume $w(e_1) < w(e_2) < \ldots < w(e_m)$
   \State Assume $i \geq 2$.
 
   \If {$K \cup e_i$ is cycle-free} 
     \State $K \leftarrow K \cup e_i$
+  \Else
+    \If {$FindMin(e_i) < S.FindMin()$}
+      \State $S \leftarrow (P_{e_i}, FindMin(e_i)$) = the minimum difference of edge $e_i$ and some edge $e_j$ in the same $P_i$.
+    \EndIf  
   \EndIf
+  \State swap edge $e_j$ with $e_i$ in K
   \State return $T \leftarrow K$ 
 \end{algorithmic}
-Kruskal's Algorithm is as Follows
 
-\paragraph{Proof of polynomial time} The algorithm for this proof is Kruskal's algorithm which
-runs on polynomial time. 
+\paragraph{Proof of polynomial time} The algorithm for this proof is Kruskal's algorithm which we know runs on polynomial time. Added to Kruskal's algorithm is another query for the 
+usual Union-Find abstract data type where we search for the minimum difference between a given edge and the edges in the current partition of the algorithm. However, looping over edges
+ of Partitions of edges of size < |E| keeps our algorithm on polynomial time. 
 
-\paragraph{Proof of correctness} This proof we will use proof by contradiction. For this proof we want to show that our algorithm always outputs
-a tree of second-smallest total weight by proving our output is the smallest spanning tree not equal to the Minimum Spanning Tree (MST). We will 
-work with our input and also assume that our input has at least two spanning trees where at most one in the MST. For any given $G = (V,E)$ where 
-$V$ is a set of vertices and $E$ is a set of edges, let $e_i$ be the current iteration of edges added to the partial solution of Kruskal's algorithm.
-First we want to show that our output does not equal the MST. Let $E$ be the set of edges in the MST. Since all the edges have distinct weights, then
-$E$ is a unique set of edges such that for any spanning tree, $E'$, $E' = E$ if for all $e' \in E', e' = e$. Let $E'$ be the result of our algorithm, and  
-Let $w(e)$ be the edge with the smallest weight in $E$ then we know $w(e) = w(e_1)$ according to Kruskal's algorithm. However, our algorithm assumes 
-$i \geq 2$ s.t. $w(e_1)$ never enters the loop nor is included in the final $E'$. Thus $e \notin E'$ contradicts our assuption that $E' = E$.
+\paragraph{Proof of correctness} We want to show that our algorithm produces a spanning tree of second smallest weight. We will do this by proving that our algorithm produces a spanning 
+tree of minimal weight and that with for any possible edge swaps of edges $e, e'$ where $e$ is in $K$ and $e'$ is not, any reduction in weight greater than 0 results in the MST. Since we know
+all edge weights are unique, the Minimum Spanning Tree is also unique. 
 
-Secondly we want to show that $E'$ has the second smallest total weight. We will prove this using the same principles of the squeeze theorem. 
+\subparagraph{Feasibility} For our proof of feasibility we want to show that our algorithm produces a spanning tree. Since Kruskal's algorithm produces a spanning tree of no cycles by design, 
+we can assume that after our run we receive a spanning tree. However, we want to show that a swap of edges afterwards also results in a spanning tree. We will show this using the contradpositive: 
+if after the swap there was no spanning tree then before the swap there was no spanning tree. Let our algorithm produce tree $K$. Assume after some swap of edges $e$ connecting vertices $w,x$ and $e'$ connecting vertices $y,z$ left vertex $x$ without a connecting edge. Let $e$ be in some partition P. 
+Then if we were to add $e'$ to $P$, we know that it would not create a cycle in containing vertex x because if removing edge e disconnecting x, then edge e was the only edge containing x. However, P 
+no longer contains vertex x and so adding $e'$ to P does not help merge x into P. Thus, our algorithm always results in a spanning tree.  
 
-Let $X$ be the set of edges that make up the MST and $Y$ be the set of edges output by our algorithm, and let $Z$ be some set of edges such that the 
-the total weight of $Z$ is greater than the total weight of $X$ and smaller than the total weight of $Y$. We want to show that the total weight of $Y$ is 
-at most the total weight of $Z$, $w(Y) \leq w(Z)$. We will prove this using contradiction. Let $x \in X, y \in Y$ and $z \in Z$. 
+\subparagraph{Optimality} For our proof of optimality we want to show that our algorithm produces a spanning tree of second smallest weight where any possible swap of edges that reduces the 
+weight our tree automatically results in the distinct Minimum Spanning Tree. We will prove this using an exchange argument. First we want to define our solutions. Let 
+the spanning tree our algorithm produces be tree $K$ and the spanning tree of some other optimal algorithm be tree $O$. Then we want to show that for some edge in $O$, $e_o$ with 
+weight $w_{e_o}$ that is greater than some edge $e_k$, in $K$ such that : $w_{e_o} > w_{e_k}$ that once swapped, the total weight of $O$ becomes smaller. However, we want to show that in doing so it does not
+result in the Minimum Spanning Tree.  Suppose there existed some edge $e_m$ in the distinct MST where if swapped with $e_o, O$ becomes the minimum spanning tree. Then we know that $w_{e_o} > w_{e_m}$. However, 
+we also know that the weight of edge $e_k$ is smaller than the weight of $e_o$, so we can swap the edges to get closer to an optimal solution. However, since the Minimum Spanning Tree is distinct $e_k \neq e_m$. Thus, we know
+$w_{e_o} > w_{e_k} > w_{e_m}$ where $e_k$ is squeezed in between any edge in $O$ and any edge in the MST. This shows that there does not exist an edge where a swap could be possible, reduce the weight of the tree produced by algorithm
+and still not be the MST. 
 
-The difference between $e_i$ and $e_{i+1}$ in Kruskal's algorithm is minimal because if $e_i$ and $e_{i+1}$ are both minimal since Kruskal's assumes
-$w(e_i) < w(e_{i+1}) < ... w(e_n)$ We know $e_i$ and $e_{i+1}$ are edges with weights closest to each other such that $e_{i+1} - e_i$ is minimal with every 
-new edge added. If $\exists e' \in E$ such that $w(e') - w(e_i) < w(e_{i+1}) - w(e_i)$ then $w(e') < w(e_{i+1})$. But thmeans $e = e_{i + 1}$. 
-
-
-
-  Your solution goes here.
 }
 
 \newpage
@@ -149,6 +153,37 @@ new edge added. If $\exists e' \in E$ such that $w(e') - w(e_i) < w(e_{i+1}) - w
 Solve exercise 19 in Chapter 4 (bottleneck rates) in the Kleinberg-Tardos textbook.
 \end{problem}
 \solution{
+Collaborated with: Yael Sulkin
+\begin{algorithmic}
+  \State $S$ is the set of explored vertices in $V$
+  \State Assume $P$ is the set of edges in our working Spanning Tree
+  \State choose a source node, $s_0$, $S \leftarrow {s_o}$
+  \State Let function bandwidth be the bandwidth $b_e$ of a given edge $(v, u)$
+
+
+\While $S \neq V$
+  \State choose $u \in V - S$ of maximum AttachmentCost(u)
+  \State let $e = (v,u)$ be maximizing edges 
+  \State $P \leftarrow P \cup {e}, S \leftarrow S \cup {u}$
+\EndWhile
+\State return $T \leftarrow P$
+\end{algorithmic}
+
+\paragraph{Proof of Runtime} Our algorithm works off of Prim's algorithm and the priority queue abstract data structure. Since we only changed the measurement we iterate over and nothing 
+else of the design of Prim's algorithm we know that our runtime is equal to $O(|V|^2)$ according to Prim's Worst Time Complexity in the Big-O complexity Time chart cheat sheet. 
+
+\paragraph{Proof of correctness} We want to show that for our algorithm it returns 1) a spanning tree and 2) a spanning tree with the best-acheivable bottle neck rate for any pair of vertices
+(v,u) in our result. We will show this inductively using a greedy stays ahead argument, considering Prim's algorithm is a greedy algorithm. 
+
+\subparagraph{feasibility} 
+
+\subparagraph{correctness} With greedy stays ahead arguments we first want to define our solutions. Let the solution our algorithm produces be $K$ and the 
+result of some other solution be $O$. For some edge in $K$ we will note $e_k$ and for some edge in $O$ we will note $e_o$. Next, we want to define our measurement
+where we will be inductively iterating upon. Since our goal is to produce the best achievable bottleneck rate between any two vertices $(u,v)$ we want to 
+make sure that at every iteration our algorithm is producing a best-achievable bottle neck rate as great as the optimal solution. That is, $b(P)_k \geq b(P)_o$. 
+
+\subparagraph{}
+
   Your solution goes here.
 }
 
@@ -174,7 +209,32 @@ Let $G(V,E)$ be an undirected and \textbf{unweighted} graph with $n$ nodes. Let 
 
 \end{problem}
 \solution{
-  Your solution goes here.
+  Collaborated with: Yael Sulkin
+
+  \begin{algorithmic}
+    \State $S$ is the set of explored vertices in $V$
+    \State Assume $P$ is the set of edges in our working Spanning Tree
+    \State choose a source node, $s_0$, $S \leftarrow {s_o}$
+    \State Let $K = {T_1, T_2, T_3, \ldots T_n-1}$ 
+    \State Let function $SharedTrees(K, v, u)$ count number of Trees in $K$ that contain edge $(v,u)$ \\
+  
+  
+  \While {K is not empty}
+    \State choose $u \in V - S$ of maximum $SharedTrees(K, v, u)$
+    \State let $e = (v,u)$ be maximal shared tree count
+    \State Delete all trees containing edge e in K 
+    \State $P \leftarrow P \cup {e}, S \leftarrow S \cup {u}$
+  \EndWhile
+  \State return $T \leftarrow P$
+  \end{algorithmic}
+
+  \paragraph{Proof of Runtime}
+  
+  \paragraph{Proof of correctness}
+
+  \subparagraph{feasibility} 
+
+  \subparagraph{optimality} 
 }
 
 \newpage
@@ -187,6 +247,34 @@ Let $G(V,E)$ be an undirected and \textbf{unweighted} graph with $n$ nodes. Let 
 \begin{problem}[25 points]
 Let $G=(V,E,\{w_e\}_{e \in E})$ be an undirected graph with positive edge weights $w_e$ indicating the lengths of the edges. Devise a polynomial-time algorithm that, given a vertex $i \in V,$ computes the length of the shortest cycle containing vertex $i$ in $G.$ Give a proof of correctness and a running-time analysis for your algorithm. For full credit, your algorithm should run in time $O(|V|^2$).
 \end{problem}
+
+\solution {
+Collaborated with: Yael Sulkin
+
+\begin{algorithmic}
+  \State Dijkstra's algorithm $(G, l)$
+  \State S be the set of explored nodes
+
+  \For {each $u \in S$, we store distance $d(u)$}
+  \State Inititally $S = {i}$ and $d(s) = 0$
+  \While {$S \neq V$}
+  \State Select a node $v \notin S$ with at least one edge from S for which $d'(v) = min_{e=(u,v):u\in S} d(u) + l_e$ is as small as possible
+  Add $v$ to $S$ and define $d(v) = d'(v)$
+  \EndWhile
+  \EndFor
+
+\end{algorithmic}
+
+\paragraph{Proof of Runtime}
+
+\paragraph{Proof of Correctness}
+
+\subparagraph{Proof of feasibility}
+
+\sub
+
+}
+
 
 
 \newpage
